# camera_calibration

./: .gitignore  README.md  pyproject.toml
cam_extrinsics/: 134322071848.yaml  408322072302.yaml
examples/: handeye_with_frankapy.py
src/cam_calib/: __init__.py  __main__.py  cli.py
src/cam_calib/adapters/: __init__.py  base.py  realsense.py
src/cam_calib/assets/: __init__.py
src/cam_calib/core/: __init__.py  aruco.py  charuco.py  extrinsics_io.py  geometry.py  robot_io.py  types.py
src/cam_calib/depth/: __init__.py  foundation_stereo.py
src/cam_calib/robot/: __init__.py  urdf_pcd.py
src/cam_calib/viz/: __init__.py  open3d_viz.py  pointcloud.py  rerun_viz.py
src/cam_calib/workflows/: __init__.py  auto_exposure.py  calibrate_extrinsics.py  handeye_dataset.py  set_robot_base_pose.py  visualize_fused.py
tests/: conftest.py  test_auto_exposure.py  test_charuco.py  test_extrinsics_io.py  test_foundation_stereo.py  test_geometry.py  test_handeye_dataset.py  test_robot_io.py
